--- a/nginx/unifydata.conf
+++ b/nginx/unifydata.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 10.0.52.237;
 
     root /var/www/unifydata/public;
     index index.php index.html index.htm;
